<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_main">

        <EditText
            android:id="@+id/edTxtSearchField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Movie title"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/edit_text_hint"
            android:inputType="text"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/imgBtnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:background="@drawable/button_search"
            android:contentDescription="@string/search_icon_description"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSearchFavorite"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite" />

</LinearLayout>


